// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the EditUser component. Should match snapshot - edit. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <header
    class="z-70 sticky top-0 bg-dial-sapphire max-w-catalog mx-auto"
  >
    <div
      class="flex flex-wrap header-min-height px-8 xl:px-16"
    >
      <a
        class="flex py-6 image-block-hack"
        href="/"
      >
        <img
          alt="Digital Impact Exchage Logo."
          data-nimg="1"
          decoding="async"
          height="44"
          loading="lazy"
          src="/_next/image?url=%2Fassets%2Fexchange%2Fexchange-logo.png&w=384&q=75"
          srcset="/_next/image?url=%2Fassets%2Fexchange%2Fexchange-logo.png&w=256&q=75 1x, /_next/image?url=%2Fassets%2Fexchange%2Fexchange-logo.png&w=384&q=75 2x"
          style="color: transparent;"
          width="154"
        />
      </a>
      <label
        class="ml-auto my-auto pointer-cursor block xl:hidden"
        for="menu-toggle"
      >
        <svg
          class="fill-current text-gray-900"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Menu
          </title>
          <path
            d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
          />
        </svg>
      </label>
      <input
        class="hidden"
        id="menu-toggle"
        type="checkbox"
      />
      <div
        class="hidden xl:flex xl:items-center xl:w-auto w-full ml-auto mx-2"
        id="menu"
      >
        <nav>
          <ul
            class="block xl:hidden mt-6 text-sm text-dial-white-beech"
            style="min-height: 405px;"
          >
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="/switch-language"
              >
                Select Language
                <svg
                  class="text-base inline ml-2 text-base"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
                    />
                  </g>
                </svg>
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="/expand-catalog"
              >
                Catalog
                <svg
                  class="text-base inline ml-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
                    />
                  </g>
                </svg>
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="wizard"
              >
                Recommendation Wizard
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="/expand-resources"
              >
                Resources
                <svg
                  class="text-base inline ml-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
                    />
                  </g>
                </svg>
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="about"
              >
                About
              </a>
            </li>
            <li
              class="py-4 border-b font-semibold"
            >
              <a
                class="mx-6 font-semibold"
                href="/admin"
              >
                Admin
                <svg
                  class="text-base inline ml-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
                    />
                  </g>
                </svg>
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-2 inline bg-dial-biscotti pl-2 pr-3 py-3 rounded font-semibold"
                href="signOut"
              >
                <img
                  alt="Back"
                  class="inline mx-2"
                  height="20px"
                  src="/icons/user.svg"
                  width="20px"
                />
                <div
                  class="inline text-sm"
                >
                  some-fake-username
                </div>
                <svg
                  class="text-base inline ml-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
                    />
                  </g>
                </svg>
              </a>
            </li>
            <li
              class="py-4"
            >
              <a
                class="mx-6 font-semibold"
                href="https://docs.dial.community/projects/product-registry/en/latest/"
                rel="noreferrer"
                target="_blank"
              >
                Help
              </a>
            </li>
          </ul>
          <ul
            class="hidden xl:flex items-center text-dial-white-beech pt-4 xl:pt-0 xl:gap-x-2"
          >
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-marketplace"
                href="menu-marketplace"
                id="menu-marketplace"
              >
                Marketplace
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-marketplace"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-about"
                href="menu-about"
                id="menu-about"
              >
                Help
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-about"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-help"
                href="menu-help"
                id="menu-help"
              >
                Help
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-help"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-resource"
                href="menu-resource"
                id="menu-resource"
              >
                Resources
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-resource"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-admin"
                href="menu-admin"
                id="menu-admin"
              >
                Admin
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-admin"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right intro-overview-signup"
            >
              <a
                data-testid="user-menu"
                href="menu-user"
                id="menu-user"
              >
                <div
                  class="username-avatar"
                  id="menu-user"
                >
                  <span
                    class="text-dial-gray-dark"
                  >
                    SO
                  </span>
                </div>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-language"
                href="menu-language"
                id="menu-language"
              >
                English (en)
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-language"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
  <div
    class="max-w-catalog mx-auto"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="lg:w-2/5 mx-auto px-4 font-bold text-dial-sapphire"
      >
        <div
          class="hidden lg:block"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="pb-8 px-8"
      >
        <div
          class="sm:px-0 mx-auto"
          id="content"
        >
          <form>
            <div
              class="
                sm:w-full md:w-2/3 lg:w-2/5 bg-edit shadow-md rounded
                px-8 pt-6 pb-12 mb-4 mx-auto flex flex-col gap-3
              "
            >
              <div
                class="text-2xl font-semibold text-dial-sapphire pb-4"
              >
                Edit User Test
              </div>
              <div
                class="flex flex-col lg:flex-col gap-4"
              >
                <div
                  class="form-field-wrapper"
                  data-testid="email-label"
                >
                  <label
                    class="form-field-label required-field"
                    for="email"
                  >
                    Email
                  </label>
                  <input
                    class="w-full"
                    data-testid="email-input"
                    name="email"
                    placeholder="Enter email address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="username-label"
                >
                  <label
                    class="form-field-label required-field"
                    for="username"
                  >
                    Username
                  </label>
                  <input
                    class="w-full"
                    data-testid="username-input"
                    name="username"
                    placeholder="Enter username"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                    for="roles"
                  >
                    Roles
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:r0:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-5rjclb-placeholder"
                          id="react-select-:r0:-placeholder"
                        >
                          Select user roles
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-:r0:-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-undefined"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-wrap gap-3"
                  >
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      user
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                    data-testid="organization-search"
                    for="organization"
                  >
                    Organization
                  </label>
                  <div
                    class=" css-l45kjq-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-:r1:-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="react-select__control css-qv4grc-control"
                    >
                      <div
                        class="react-select__value-container css-17t7gkf-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-5rjclb-placeholder"
                          id="react-select-:r1:-placeholder"
                        >
                          Enter user organization
                        </div>
                        <div
                          class="react-select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-:r1:-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="react-select__input"
                            id="react-select-id-organization"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="text-2xl"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                    for="product"
                  >
                    Products
                  </label>
                  <div
                    class=""
                    data-testid="product-search"
                  >
                    <div
                      class="rounded text-sm text-dial-gray-dark my-auto css-l45kjq-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-:r2:-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="react-select__control css-qv4grc-control"
                      >
                        <div
                          class="react-select__value-container css-17t7gkf-ValueContainer"
                        >
                          <div
                            class="react-select__placeholder css-5rjclb-placeholder"
                            id="react-select-:r2:-placeholder"
                          >
                            Enter products owned by user
                          </div>
                          <div
                            class="react-select__input-container css-qbdosj-Input"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-:r2:-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-label="Filter by Product"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="react-select__input"
                              id="async-select-id-undefined"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="css-tj5bde-Svg"
                              focusable="false"
                              height="20"
                              viewBox="0 0 20 20"
                              width="20"
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-wrap gap-x-3"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                        data-testid="pill"
                      >
                        Product: product 1
                        <svg
                          class="cursor-pointer opacity-50"
                          data-testid="remove-button"
                          fill="currentColor"
                          height="1.5em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1.5em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="py-1"
                    >
                      <div
                        class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                        data-testid="pill"
                      >
                        Product: product 2
                        <svg
                          class="cursor-pointer opacity-50"
                          data-testid="remove-button"
                          fill="currentColor"
                          height="1.5em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1.5em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <label
                  class="flex gap-x-2 items-center form-field-label my-auto"
                  data-testid="user-is-confirmed"
                >
                  <input
                    class="h-8 w-8"
                    data-testid="checkbox"
                    name="confirmed"
                    type="checkbox"
                  />
                  User account confirmed
                </label>
                <div
                  class="flex flex-wrap text-xl mt-8 gap-3"
                >
                  <button
                    class="submit-button"
                    data-testid="submit-button"
                    type="submit"
                  >
                    Submit User
                  </button>
                  <button
                    class="cancel-button"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
  <footer>
    <div
      class="block"
    >
      <div
        class="w-full bg-dial-gray-dark fixed bottom-0 right-0 left-0 z-80"
      >
        <div
          class="flex flex-col md:flex-row justify-center py-4 mx-4 gap-3"
        >
          <div
            class="text-dial-gray-light my-auto"
          >
            Cookies help us deliver our services. By using our services, you agree to our use of cookies.
          </div>
          <div
            class="flex justify-center gap-4"
          >
            <button
              class="text-button-gray bg-dial-sunshine rounded inline-flex items-center py-2 px-4"
            >
              Accept All
            </button>
            <button
              class="text-button-gray bg-dial-sunshine rounded inline-flex items-center py-2 px-4"
            >
              Cookie Details
            </button>
            <a
              class="my-auto text-dial-sunshine border-b-2 border-transparent hover:border-dial-sunshine"
              href="/privacy-policy"
              target="_blank"
            >
              Privacy Policy
            </a>
          </div>
        </div>
        <div
          class="hidden"
        >
          <div
            class="flex flex-col md:flex-row justify-center py-4 mx-4 gap-3"
          >
            <label
              class="inline-flex items-center"
            >
              <input
                checked=""
                class="h-4 w-4 form-checkbox text-white"
                name="essential"
                type="checkbox"
              />
              <span
                class="ml-2 text-white"
              >
                Essential Cookies
              </span>
            </label>
            <label
              class="inline-flex items-center"
            >
              <input
                checked=""
                class="h-4 w-4 form-checkbox text-white"
                name="essential"
                type="checkbox"
              />
              <span
                class="ml-2 text-white"
              >
                Statistics Cookies
              </span>
            </label>
            <button
              class="text-button-gray bg-dial-sunshine rounded inline-flex items-center py-2 px-4"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="max-w-catalog mx-auto bg-dial-blue-chalk text-dial-stratos"
    >
      <div
        class="flex flex-col xl:flex-row gap-x-8 2xl:gap-x-24 gap-y-4 2xl:gap-y-8 py-8 xl:py-12 px-4 xl:px-20"
      >
        <div
          class="w-full xl:w-3/12 flex flex-col gap-y-4 xl:gap-y-8"
        >
          <div
            class="text-xl font-semibold"
          >
            Connect with us
          </div>
          <hr
            class="border border-footer-delimiter"
          />
          <div
            class="text-base"
          >
            Sign up for our newsletter to learn more about DIAL and how you can be involved.
          </div>
          <div>
            <a
              class="py-2 px-5 rounded-md bg-dial-sunshine font-semibold"
              href="//digitalimpactalliance.us11.list-manage.com/subscribe?u=38fb36c13a6fa71469439b2ab&id=18657ed3a5"
              rel="noreferrer"
              target="_blank"
            >
              Sign up for our Newsletter
            </a>
          </div>
        </div>
        <div
          class="w-full xl:w-2/12 flex flex-col gap-y-4 xl:gap-y-8"
        >
          <div
            class="text-xl font-semibold"
          >
            Follow us
          </div>
          <hr
            class="border border-footer-delimiter"
          />
          <div
            class="flex gap-4"
          >
            <a
              href="//twitter.com/DIAL_Community"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1.5em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                />
              </svg>
            </a>
            <a
              href="//www.linkedin.com/company/digital-impact-alliance/"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1.5em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="w-full xl:w-7/12 flex flex-col gap-y-4 xl:gap-y-8"
        >
          <div
            class="text-xl font-semibold"
          >
            Our partners and supporters
          </div>
          <hr
            class="border border-footer-delimiter"
          />
          <div
            class="flex flex-row flex-wrap gap-4 self-center xl:self-start"
          >
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-4"
              >
                <a
                  href="//unfoundation.org/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The United Nations Foundation Logo"
                    data-nimg="1"
                    decoding="async"
                    height="59"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Funf-logo.png&w=640&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Funf-logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Funf-logo.png&w=640&q=75 2x"
                    style="color: transparent;"
                    width="246"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-4"
              >
                <a
                  href="//www.gatesfoundation.org/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The Bill & Melinda Gates Foundation"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Fbill-n-melinda-logo.png&w=640&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Fbill-n-melinda-logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Fbill-n-melinda-logo.png&w=640&q=75 2x"
                    style="color: transparent;"
                    width="204"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-10"
              >
                <a
                  href="//www.sida.se/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The Swedish International Development Cooperation Agency Logo"
                    data-nimg="1"
                    decoding="async"
                    height="100"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Fsida-logo.png&w=256&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Fsida-logo.png&w=128&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Fsida-logo.png&w=256&q=75 2x"
                    style="color: transparent;"
                    width="102"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-12"
              >
                <a
                  href="//www.gov.uk/government/organisations/foreign-commonwealth-development-office"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The Foreign, Commonwealth & Development Office Logo"
                    data-nimg="1"
                    decoding="async"
                    height="60"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Ffcdo-logo.png&w=128&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Ffcdo-logo.png&w=64&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Ffcdo-logo.png&w=128&q=75 2x"
                    style="color: transparent;"
                    width="60"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-2"
              >
                <a
                  href="//www.giz.de/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The German Corporation for International Cooperation GmbH Logo"
                    data-nimg="1"
                    decoding="async"
                    height="879"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Fgiz-logo.png&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Fgiz-logo.png&w=1920&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Fgiz-logo.png&w=3840&q=75 2x"
                    style="color: transparent;"
                    width="1570"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-1"
              >
                <a
                  href="//www.bmz.de/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The Federal Ministry for Economic Cooperation and Development Logo"
                    data-nimg="1"
                    decoding="async"
                    height="536"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Fbmz-logo.png&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Fbmz-logo.png&w=1200&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Fbmz-logo.png&w=3840&q=75 2x"
                    style="color: transparent;"
                    width="1152"
                  />
                </a>
              </div>
            </div>
          </div>
          <div
            class="ml-auto pt-8 flex flex-row flex-wrap gap-3"
          >
            <div
              class="group hover:cursor-pointer"
            >
              <a
                class="border-b-2 border-transparent group-hover:border-dial-sunshine"
                href="/privacy-policy"
                rel="noreferrer"
                target="_blank"
              >
                Privacy Policy
              </a>
            </div>
            <div
              class="border-r border-footer-delimiter"
            />
            <div
              class="group rounded-md hover:cursor-pointer"
            >
              <a
                class="border-b-2 border-transparent group-hover:border-dial-sunshine"
              >
                Contact Us
              </a>
            </div>
            <div
              class="border-r border-footer-delimiter"
            />
            <div
              class="block"
            >
              © 
              2023
               
              Digital Impact Alliance
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Unit test for the EditUser component. Should match snapshot - unauthorized. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <header
    class="z-70 sticky top-0 bg-dial-sapphire max-w-catalog mx-auto"
  >
    <div
      class="flex flex-wrap header-min-height px-8 xl:px-16"
    >
      <a
        class="flex py-6 image-block-hack"
        href="/"
      >
        <img
          alt="Digital Impact Exchage Logo."
          data-nimg="1"
          decoding="async"
          height="44"
          loading="lazy"
          src="/_next/image?url=%2Fassets%2Fexchange%2Fexchange-logo.png&w=384&q=75"
          srcset="/_next/image?url=%2Fassets%2Fexchange%2Fexchange-logo.png&w=256&q=75 1x, /_next/image?url=%2Fassets%2Fexchange%2Fexchange-logo.png&w=384&q=75 2x"
          style="color: transparent;"
          width="154"
        />
      </a>
      <label
        class="ml-auto my-auto pointer-cursor block xl:hidden"
        for="menu-toggle"
      >
        <svg
          class="fill-current text-gray-900"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Menu
          </title>
          <path
            d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"
          />
        </svg>
      </label>
      <input
        class="hidden"
        id="menu-toggle"
        type="checkbox"
      />
      <div
        class="hidden xl:flex xl:items-center xl:w-auto w-full ml-auto mx-2"
        id="menu"
      >
        <nav>
          <ul
            class="block xl:hidden mt-6 text-sm text-dial-white-beech"
            style="min-height: 370px;"
          >
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="/switch-language"
              >
                Select Language
                <svg
                  class="text-base inline ml-2 text-base"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
                    />
                  </g>
                </svg>
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="/expand-catalog"
              >
                Catalog
                <svg
                  class="text-base inline ml-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
                    />
                  </g>
                </svg>
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="wizard"
              >
                Recommendation Wizard
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="/expand-resources"
              >
                Resources
                <svg
                  class="text-base inline ml-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.172 12l-4.95-4.95 1.414-1.414L16 12l-6.364 6.364-1.414-1.414z"
                    />
                  </g>
                </svg>
              </a>
            </li>
            <li
              class="py-4 border-b"
            >
              <a
                class="mx-6 font-semibold"
                href="about"
              >
                About
              </a>
            </li>
            <li
              class="py-4 border-b font-semibold"
            >
              <a
                class="mx-6 font-semibold"
                href="/sign-in"
              >
                Sign Up or Log In
              </a>
            </li>
            <li
              class="py-4"
            >
              <a
                class="mx-6 font-semibold"
                href="https://docs.dial.community/projects/product-registry/en/latest/"
                rel="noreferrer"
                target="_blank"
              >
                Help
              </a>
            </li>
          </ul>
          <ul
            class="hidden xl:flex items-center text-dial-white-beech pt-4 xl:pt-0 xl:gap-x-2"
          >
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-marketplace"
                href="menu-marketplace"
                id="menu-marketplace"
              >
                Marketplace
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-marketplace"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-about"
                href="menu-about"
                id="menu-about"
              >
                Help
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-about"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-help"
                href="menu-help"
                id="menu-help"
              >
                Help
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-help"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-resource"
                href="menu-resource"
                id="menu-resource"
              >
                Resources
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-resource"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right intro-overview-signup"
            >
              <a
                class="
    block px-4 py-2 text-base text-white-beech hover:bg-gray-100 hover:text-gray-900
  "
                data-testid="login"
                href="signin"
                role="menuitem"
              >
                Sign Up or Log In
              </a>
            </li>
            <li
              class="relative mt-2 xl:mt-0 text-right"
            >
              <a
                class="lg:p-2 px-0 border-b-2 border-transparent hover:border-dial-sunshine lg:mb-0 mb-2 cursor-pointer"
                data-testid="menu-language"
                href="menu-language"
                id="menu-language"
              >
                English (en)
                <svg
                  aria-hidden="true"
                  class="ml-1 inline text-2xl"
                  fill="currentColor"
                  height="1em"
                  id="svg-down-menu-language"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
  <div
    class="max-w-catalog mx-auto"
  >
    <div
      class="h-[60vh]"
    >
      <div
        class="flex bg-dial-alice-blue h-full"
      >
        <div
          class="text-button-gray text-lg w-full my-auto flex flex-col gap-4"
        >
          <svg
            class="mx-auto"
            fill="currentColor"
            height="3em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="3em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
          <div
            class="text-center mt-5"
          >
            You are not authorized to view this page
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer>
    <div
      class="block"
    >
      <div
        class="w-full bg-dial-gray-dark fixed bottom-0 right-0 left-0 z-80"
      >
        <div
          class="flex flex-col md:flex-row justify-center py-4 mx-4 gap-3"
        >
          <div
            class="text-dial-gray-light my-auto"
          >
            Cookies help us deliver our services. By using our services, you agree to our use of cookies.
          </div>
          <div
            class="flex justify-center gap-4"
          >
            <button
              class="text-button-gray bg-dial-sunshine rounded inline-flex items-center py-2 px-4"
            >
              Accept All
            </button>
            <button
              class="text-button-gray bg-dial-sunshine rounded inline-flex items-center py-2 px-4"
            >
              Cookie Details
            </button>
            <a
              class="my-auto text-dial-sunshine border-b-2 border-transparent hover:border-dial-sunshine"
              href="/privacy-policy"
              target="_blank"
            >
              Privacy Policy
            </a>
          </div>
        </div>
        <div
          class="hidden"
        >
          <div
            class="flex flex-col md:flex-row justify-center py-4 mx-4 gap-3"
          >
            <label
              class="inline-flex items-center"
            >
              <input
                checked=""
                class="h-4 w-4 form-checkbox text-white"
                name="essential"
                type="checkbox"
              />
              <span
                class="ml-2 text-white"
              >
                Essential Cookies
              </span>
            </label>
            <label
              class="inline-flex items-center"
            >
              <input
                checked=""
                class="h-4 w-4 form-checkbox text-white"
                name="essential"
                type="checkbox"
              />
              <span
                class="ml-2 text-white"
              >
                Statistics Cookies
              </span>
            </label>
            <button
              class="text-button-gray bg-dial-sunshine rounded inline-flex items-center py-2 px-4"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="max-w-catalog mx-auto bg-dial-blue-chalk text-dial-stratos"
    >
      <div
        class="flex flex-col xl:flex-row gap-x-8 2xl:gap-x-24 gap-y-4 2xl:gap-y-8 py-8 xl:py-12 px-4 xl:px-20"
      >
        <div
          class="w-full xl:w-3/12 flex flex-col gap-y-4 xl:gap-y-8"
        >
          <div
            class="text-xl font-semibold"
          >
            Connect with us
          </div>
          <hr
            class="border border-footer-delimiter"
          />
          <div
            class="text-base"
          >
            Sign up for our newsletter to learn more about DIAL and how you can be involved.
          </div>
          <div>
            <a
              class="py-2 px-5 rounded-md bg-dial-sunshine font-semibold"
              href="//digitalimpactalliance.us11.list-manage.com/subscribe?u=38fb36c13a6fa71469439b2ab&id=18657ed3a5"
              rel="noreferrer"
              target="_blank"
            >
              Sign up for our Newsletter
            </a>
          </div>
        </div>
        <div
          class="w-full xl:w-2/12 flex flex-col gap-y-4 xl:gap-y-8"
        >
          <div
            class="text-xl font-semibold"
          >
            Follow us
          </div>
          <hr
            class="border border-footer-delimiter"
          />
          <div
            class="flex gap-4"
          >
            <a
              href="//twitter.com/DIAL_Community"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1.5em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                />
              </svg>
            </a>
            <a
              href="//www.linkedin.com/company/digital-impact-alliance/"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1.5em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1.5em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="w-full xl:w-7/12 flex flex-col gap-y-4 xl:gap-y-8"
        >
          <div
            class="text-xl font-semibold"
          >
            Our partners and supporters
          </div>
          <hr
            class="border border-footer-delimiter"
          />
          <div
            class="flex flex-row flex-wrap gap-4 self-center xl:self-start"
          >
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-4"
              >
                <a
                  href="//unfoundation.org/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The United Nations Foundation Logo"
                    data-nimg="1"
                    decoding="async"
                    height="59"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Funf-logo.png&w=640&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Funf-logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Funf-logo.png&w=640&q=75 2x"
                    style="color: transparent;"
                    width="246"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-4"
              >
                <a
                  href="//www.gatesfoundation.org/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The Bill & Melinda Gates Foundation"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Fbill-n-melinda-logo.png&w=640&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Fbill-n-melinda-logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Fbill-n-melinda-logo.png&w=640&q=75 2x"
                    style="color: transparent;"
                    width="204"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-10"
              >
                <a
                  href="//www.sida.se/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The Swedish International Development Cooperation Agency Logo"
                    data-nimg="1"
                    decoding="async"
                    height="100"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Fsida-logo.png&w=256&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Fsida-logo.png&w=128&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Fsida-logo.png&w=256&q=75 2x"
                    style="color: transparent;"
                    width="102"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-12"
              >
                <a
                  href="//www.gov.uk/government/organisations/foreign-commonwealth-development-office"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The Foreign, Commonwealth & Development Office Logo"
                    data-nimg="1"
                    decoding="async"
                    height="60"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Ffcdo-logo.png&w=128&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Ffcdo-logo.png&w=64&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Ffcdo-logo.png&w=128&q=75 2x"
                    style="color: transparent;"
                    width="60"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-2"
              >
                <a
                  href="//www.giz.de/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The German Corporation for International Cooperation GmbH Logo"
                    data-nimg="1"
                    decoding="async"
                    height="879"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Fgiz-logo.png&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Fgiz-logo.png&w=1920&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Fgiz-logo.png&w=3840&q=75 2x"
                    style="color: transparent;"
                    width="1570"
                  />
                </a>
              </div>
            </div>
            <div
              class="w-36 h-20 bg-white rounded-md flex"
            >
              <div
                class="self-center px-1"
              >
                <a
                  href="//www.bmz.de/"
                  rel="noreferrer"
                  target="_blank"
                >
                  <img
                    alt="The Federal Ministry for Economic Cooperation and Development Logo"
                    data-nimg="1"
                    decoding="async"
                    height="536"
                    loading="lazy"
                    src="/_next/image?url=%2Fimages%2Ffooter%2Fbmz-logo.png&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ffooter%2Fbmz-logo.png&w=1200&q=75 1x, /_next/image?url=%2Fimages%2Ffooter%2Fbmz-logo.png&w=3840&q=75 2x"
                    style="color: transparent;"
                    width="1152"
                  />
                </a>
              </div>
            </div>
          </div>
          <div
            class="ml-auto pt-8 flex flex-row flex-wrap gap-3"
          >
            <div
              class="group hover:cursor-pointer"
            >
              <a
                class="border-b-2 border-transparent group-hover:border-dial-sunshine"
                href="/privacy-policy"
                rel="noreferrer"
                target="_blank"
              >
                Privacy Policy
              </a>
            </div>
            <div
              class="border-r border-footer-delimiter"
            />
            <div
              class="group rounded-md hover:cursor-pointer"
            >
              <a
                class="border-b-2 border-transparent group-hover:border-dial-sunshine"
              >
                Contact Us
              </a>
            </div>
            <div
              class="border-r border-footer-delimiter"
            />
            <div
              class="block"
            >
              © 
              2023
               
              Digital Impact Alliance
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
